# Chip8-Emulator

./: CMakeLists.txt  README.md
include/: chip8.h  ioInterface.h
src/: chip8.cpp  ioInterface.cpp  main.cpp
