cmake_minimum_required(VERSION 3.18.1)
project(chip8)
find_package(SDL2 REQUIRED)
include_directories(./include)
add_executable(chip8 ./src/main.cpp ./src/chip8.cpp ./src/ioInterface.cpp)
set(CMAKE_BUILD_TYPE Debug)
set (CMAKE_CXX_STANDARD 11)
target_compile_options(chip8 PRIVATE -I/Library/Frameworks/SDL2.framework/Headers -F/Library/Frameworks -framework SDL2)
target_link_libraries(chip8 PRIVATE SDL2::SDL2)
